fix: adjust z-index for paragraph positioning

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ p {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: -1;
   overflow: hidden;
   top: 0;
   left: 0;
